# SLstening

./: .gitignore  Gemini.md  README.md  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts  vitest_output.txt
.agent/rules/: common-chat.md  data-management.md  frontend-react.md  logging-error-handling.md  memory-bank-specs.md  performance-optimization.md  rust-backend.md  tauri-v2-core.md  tauri2-best-practices.md  testing-standards.md  ui-mui-desktop.md  ui-platform-standards.md
.github/workflows/: tauri-updater.yml
cloud/: supabase.postgres.sql
docs/: debug-mode-setting.md  gap-visualization-guide.md  redball-list-virtualization.md  strict-visibility-control.md  virtualized-stock-list.md
memory-bank/: architecture.md  prd.md  task-backlog.md  tech-stack.md
scratch/: check_4771.py  check_data.py
src/: App.bak.tsx  App.css  App.tsx  supabase.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bindings/: AppError.ts  DataEntity.ts  Deal.ts  HistoryPoint.ts  MarketEvent.ts  MarketHistory.ts  MarketIndicators.ts  MarketTick.ts  Skills.ts
src-tauri/capabilities/: about.json  add.json  default.json  desktop.json  desktops.json  detail.json  main.json  schoice.json
src-tauri/icons/: icon.icns
src-tauri/sqlite/: migrations.rs
src-tauri/src/: Gemini.md  csv_processor.rs  error.rs  lib.rs  main.rs  market_watcher.rs  models.rs  updater.rs
src-tauri/src/commands/: export.rs  market.rs  mod.rs  storage.rs
src-tauri/src/sqlite/: migrations.rs
src/api/: Gemini.md  http.ts  http_cache.ts  marketApi.ts  (+1 more)
test/: eps.js  month.js
(+347 files in other folders)
